# honeyprompt

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FAQ.md  README.md  TODOS.md  fire_callbacks.py  honeyprompt-prd.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v3.0-REQUIREMENTS.md  v4.0-REQUIREMENTS.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md
.planning/notes/: honeyprompt-direction-2026-05-02.md
.planning/phases/01-generation-pipeline/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-server-and-detection/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-tui-monitor/: 03-01-SUMMARY.md  03-02-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-report-and-landing/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md
.planning/phases/05-test-agent-subcommand/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-release-infrastructure/: 06-CONTEXT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: v6-dual-product-expansion.md
assets/catalog/: tier1.toml  tier2.toml  tier3.toml  tier4.toml  tier5.toml
assets/crawlers/: known_crawlers.toml
assets/templates/: ai.txt.jinja  index.html.jinja  robots.txt.jinja  security.txt.jinja
deploy/: Caddyfile  README-deploy.md  docker-compose.yml  honeyprompt.service
deploy/templates/: Caddyfile  docker-compose.yml  honeyprompt.service
docs/: CNAME  index.html
landing/: honeyprompt.toml
landing/output/: ai.txt  callback-map.json  index.html  robots.txt
src/: lib.rs  main.rs  nonce.rs  types.rs
src/broker/: mod.rs
src/catalog/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crawler_catalog/: mod.rs
src/fingerprint/: mod.rs
src/generator/: mod.rs
src/monitor/: mod.rs
src/report/: mod.rs
src/server/: mod.rs
src/setup/: mod.rs
src/store/: mod.rs
src/test_agent/: mod.rs
test-site/: honeyprompt.toml
test-site/output/: ai.txt  callback-map.json  index.html
tests/: serve_domain.rs  test_generate.rs  test_init.rs  test_migration.rs  test_monitor.rs  test_report.rs  test_serve.rs  test_test_agent.rs
(+112 files in other folders)
