[package]
name = "honeyprompt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
minijinja = "2.18"
rust-embed = { version = "8.11", features = ["debug-embed"] }
rusqlite = { version = "0.39", features = ["bundled"] }
getrandom = "0.4"
hex = "0.4"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
