[package]
name = "honeyprompt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
minijinja = "2.18"
rust-embed = { version = "8.11", features = ["debug-embed"] }
rusqlite = { version = "0.37", features = ["bundled"] }
getrandom = "0.4"
hex = "0.4"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tokio-rusqlite = "0.7"
axum-client-ip = "1.3"
sha2 = "0.10"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
